# malicious-pdf-generator

./: .env.sample  .gitignore  JsObfuscator.py  README.md  const.py  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_malicious_pdf_generator.py
.github/workflows/: python-app.yml  python-package.yml  tests.yml
malicious_pdf_generator/: __init__.py  analyse_alerts.py  check_open_action.py  const.py  deploy_pdf.py  embedded_javascript_into_pdf.py  fetch_alerts.py  js_obfuscator.py  virusshare_analysis.py
obfuscation_testing_techniques/: obfuscation_testing1.ts  obfuscation_testing2.ts
scripts/: Open-Pdf-Interactive.ps1  Open-Pdf.ps1
server/: README.md  docker-compose.yml
server/auto-download-server/: Dockerfile  README.md  c2_client.py  server.js
server/c2_server/: Dockerfile  README.md  c2_server.py
src/: main.py  mergePDF.py
test/: test_embedded_javascript_into_pdf.py  test_obfuscated_code.py
