[metadata]
name = malicious_pdf_generator
version = 0.1
description = A Python package to generate malicious PDFs
author = Project T 6
author_email = your.email@example.com
platforms = unix, linux, windows
classifiers =
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11


[options]
packages = malicious_pdf_generator
install_requires =
    pypdf
    pdfalyzer
    anytree
    pytest
python_requires = >=3.9
[options.package_data]
malicious_pdf_generator = py.typed
